--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,12 @@ dependencies:
   cloud_firestore: ^3.1.10
   firebase_storage: ^10.2.10
 
+  # Loading
   card_loading: ^0.1.3
   flutter_spinkit: ^5.1.0
-  flutter_easyrefresh: ^2.2.1
 
+  # Spash Screen
+  easy_splash_screen: ^1.0.3
 
   # Conditional Builder
   conditional_builder_null_safety: ^0.0.6
@@ -38,7 +40,7 @@ dependencies:
   flutter_bloc: ^8.0.1
 
   # Responsive Screen
-  flutter_screenutil: ^5.3.1
+  sizer: ^2.0.15
 
   # Toast
   fluttertoast: ^8.0.9
@@ -47,20 +49,20 @@ dependencies:
   # Font Google
   google_fonts: ^2.3.1
 
-
+  # Flutter Launcher Icons
+  flutter_launcher_icons: "^0.9.2"
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "Asset/Images/logo.png"
+
 flutter:
   uses-material-design: true
   assets:
     - Asset/Images/
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
