--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   # Flutter Launcher Icons
   flutter_launcher_icons: "^0.9.2"
 
+  # Add real-time voice and video communications through a simple and powerful SDK
+  agora_rtc_engine: ^5.1.0
+  permission_handler: ^9.2.0
+
 dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
